--- a/class_day1.html
+++ b/class_day1.html
@@ -18,5 +18,9 @@
     
     
     <p> b tag is used to <b>bold word. </b> u tag is used to <u>underline word</u>. i tag is used to <i>itallic word</i></p>
+    <p>This is example for subscript.Eg- H<sub>2</sub>O</p>
+    <p>This is example for superscript.Eg- a<sup>2</sup>+ b <sup>2</sup></p>
+    <p>This is an example of <s>StrikeThrough</s></p>
+
 </body>
 </html>
